--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Erratum – Multi purpose error page template for Service, corporate, agency, Consulting, startup.">
+    <meta name="description" content="Prolific Church - Welcome to the Prolific Church Login.">
     <meta name="keywords" content="Welcome to the Prolific Church Login">
     <meta name="author" content="">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
