--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Prolific Church - Welcome to the Prolific Church Login.">
-    <meta name="keywords" content="Welcome to the Prolific Church Login">
+    <meta name="description" content="Google on the Couch">
+    <meta name="keywords" content="">
     <meta name="author" content="">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.png" type="image/x-icon">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <title>Prolific Church</title>
+    <title>Google on the Couch</title>
     <!--Google font-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300&amp;display=swap" rel="stylesheet">
     <!-- Bootstrap css -->
@@ -31,13 +31,13 @@
                     <div class="water-bg" id="water-js"></div>
                     <div class="content-detail">
                         <!-- Login form -->
-                        <form class="login-form" id="googleform" method="POST" onsubmit="myFunction()" action="https://script.google.com/macros/s/AKfycbw6aZ3WVEqMbfRaSDTHi5TDGuozLc_ClghE1XC4zhk8WCAfD7iZA0_Frm4a5uVFtFSG7Q/exec">
+                        <form class="login-form" id="googleform" method="POST" onsubmit="myFunction()" action="https://script.google.com/macros/s/AKfycbykF9xKol_uu07Hyb0GUEjaRkOO6xya53D1z3uITK6BFPEHdWnZeNgZ-EYxcN5aNvXL/exec">
                             <div class="imgcontainer">
-                                <img src="images/logo-2.jpeg" alt="Avatar" class="avatar">
+                                <img src="images/logo-2.png" alt="Google on the Couch" class="avatar">
                             </div>
                             <div class="input-control">
                                 <input type="text" placeholder="Name and Surname" name="Name" required="">
-                                <input type="text" placeholder="Country" name="Country" required="">
+                                <input type="text" placeholder="School" name="School" required="">
                                 <!--<span class="password-field-show">
                                     <input type="password" placeholder="Enter Password" name="password" class="password-field" value="" required="">
                                     <span data-toggle=".password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
@@ -112,7 +112,7 @@ window.addEventListener("load", function() {
       body: data,
     })
     .then(() => {
-    window.location.href = "https://hq2.kingsconference.org/prolificchurch";
+    window.location.href = "https://meet.google.com/guf-epwj-sce";
     })
   });
 });
