--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             </div>
                             <div class="input-control">
                                 <input type="text" placeholder="Name and Surname" name="Name" required="">
-                                <input type="text" placeholder="School" name="School" required="">
+                                <input type="text" placeholder="School/Company" name="School" required="">
                                 <!--<span class="password-field-show">
                                     <input type="password" placeholder="Enter Password" name="password" class="password-field" value="" required="">
                                     <span data-toggle=".password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
